# UnReflectAnything

./: .gitignore  Dockerfile  LICENSE_DINO.txt  README.md  _config.yml  ablate.py  ablate_agent.py  alldatasetscheck.py  config.yaml  config_inference.yaml  config_sweep.yaml  config_test.yaml  config_train.yaml  debug_batchjob.o2953386  docker-compose.yaml  downlaod.py  engine.py  engine_old.py  evaluate.py  example_checkpoint_usage.py  example_scene_filtering.py  geometry.py  highlight_analyzer.py  highlight_render.py  index.html  inference.py  logger.py  loss_utils.py  losses.py  main.py  metrics.py  mkdocs.yml  models.py  models_deprecated.py  models_old.py  models_utils.py  optimization.py  polar_highlighter.py  projections.py  pyproject.toml  (+7 more)
assets/: cli_messages.json  project_ascii_banner.txt
baselines/: config_train_A.yaml
comparisons/benchmark/configs/: eval.yaml
comparisons/benchmark/scripts/: evaluate_benchmark.py  stat_tests.py
comparisons/results/manifests/: dataset_manifest.parquet
comparisons/results/meta/: run_metadata.json
comparisons/results/raw/: per_image.parquet
config/: end2end.yaml  end2end02.yaml  end2end_optimal.yaml  inference.yaml  pretrained_config.yaml  sweep.yaml  test.yaml  tokeninp_pretrain.yaml
configs/: decoder_pretrain.yaml  decoder_pretrain_448.yaml  decoder_pretrain_896.yaml  end2end.yaml  end2end08.yaml  highlight_decoder_pretrain.yaml  tokeninp_preatrain.yaml  tokeninp_pretrain.yaml
configs/rebuttal/: ablate_DWConv.yaml  ablate_Dice.yaml  ablate_L1.yaml  ablate_LMasktoken.yaml  ablate_PosEnc.yaml  ablate_RGB.yaml  ablate_Seam.yaml  ablate_SoftTHR.yaml  ablate_Spec.yaml  ablate_TV.yaml
dataset/: README.md  __init__.py  augmentation.py  base.py  highlight.py  loader.py  mono3d_dataset.py  multi_dataset.py  polarization.py  rgbp.py  scrream.py  specialized.py  unreflectdataset.py  utils.py  wrappers.py
dataset/dataset_parsers/: convert_cholec80.py  convert_cholec80_2.py  convert_grasp.py  scared_depth.ipynb  scared_parse.ipynb  validate_cholec80.py  validate_grasp.py
demos/: Dockerfile.demos  README.md  entrypoint.sh  web_server.py
docs/: HighLightRenderer.md  adding_a_new_dataset.md  config.md  dataset.md  index.md  rgbp.md  training.md
docs/dataset/: HighLightRenderer.md  rgbp.md
endpoints/: __init__.py  _model_builder.py  _shared.py  api.py  cite_.py  cli.py  dataset_.py  download_.py  evaluate_.py  inference_.py  model_.py  test_.py  train_.py  verify_.py  weights.py
endpoints/assets/: pretrained_config.yaml
endpoints/data/: citations.txt  unreflect-completion.bash  unreflect-completion.zsh
examples/: flexible_initialization_example.py
networks/: backbones.py  backbones_prep.py  base.py  depth_decoding.py  dfe.py  e2e_models.py  odometry_decoding.py
networks/8_point/: 8p_layers.py
networks/AFSfM_Learner/: afsfm_layers.py
networks/DINOTracker/: dinotracker_layers.py
networks/deprecated/: backbones.py  combiners_readers_pose.py  heads_pose.py  layers_pose.py  models_depth.py  models_pose.py
pipelines/: __init__.py
pipelines/depth/: __init__.py  depth.py  tsdf.py  tsdf_utils.py
pipelines/features/: featureextractor.py
pipelines/matching/: __init__.py  correspondence.py  epipolar.py  helpers.py  learning.py  matching.py  metrics.py  projections.py  refinement.py
pipelines/odometry/: __init__.py  helpers.py  metrics.py  odometry.py  trajectory.py
results/astral-plant-35/: hyperparams.json
results/azure-planet-342/: config.json  hyperparams.json
results/blooming-waterfall-338/: config.json  hyperparams.json
results/celestial-galaxy-337/: config.json  hyperparams.json
results/dandy-rain-354/: config.json  hyperparams.json
results/dashing-serenity-349/: config.json  hyperparams.json
results/distinctive-dream-341/: config.json  hyperparams.json
results/distinctive-galaxy-351/: config.json  hyperparams.json
results/drawn-feather-350/: config.json  hyperparams.json
results/earnest-blaze-335/: config.json  hyperparams.json
results/efficient-energy-339/: config.json  hyperparams.json
results/expert-paper-346/: config.json  hyperparams.json
results/fearless-cherry-340/: config.json  hyperparams.json
results/fresh-music-355/: config.json  hyperparams.json
results/frosty-cherry-343/: config.json  hyperparams.json
results/rose-oath-336/: config.json  hyperparams.json
results/sage-spaceship-352/: config.json  hyperparams.json
results/silvery-cherry-356/: config.json  hyperparams.json
results/sleek-night-347/: config.json  hyperparams.json
results/spring-donkey-37/: hyperparams.json
results/stoic-energy-334/: config.json  hyperparams.json
results/usual-cloud-344/: config.json  hyperparams.json
results/vague-plant-348/: config.json  hyperparams.json
results/visionary-salad-345/: config.json  hyperparams.json
results/wandering-morning-353/: config.json  hyperparams.json
results/wild-plasma-38/: hyperparams.json
results/zany-thunder-36/: hyperparams.json
sandboxes/: dataset_workshop.ipynb  dinov3_class_tests.ipynb  dinov3tster.ipynb  engine_workshoo.ipynb  evaulation_workshop.ipynb  find_highlight.ipynb  inpainter_workshop.ipynb  model_tester.ipynb  model_workshop.ipynb  polar_highlights.ipynb  polaranything_dataset_tester copy.ipynb  polargb_dataset_downlaoder.ipynb  scrream_dataset_tests.ipynb  supervision_workshop.ipynb  training_skeleton.ipynb  virtual_highlights.ipynb
slurm/: a100.sbatch  a40.sbatch  debug.sbatch  debug_batchjob.sbatch  jsubmit.sh  resume_run.sbatch
tests/: test_model.py  test_rgbp_dataset.py
tmp/: verify_threshold.py
unreflectanything/: __init__.py  api.py  cli.py  weights.py
unreflectanything/data/: unreflect-completion.zsh
utilities/: __init__.py  ablation.py  camera.py  config.py  data_analysis.py  dev_utils.py  engine_helpers.py  engine_initializers.py  engine_memory.py  engine_visualization.py  formatting.py  inference.py  linearalgebra.py  ml_utils.py  model.py  pointcloud.py  rotations.py  run_resume.py  system_ops.py  tensor_utils.py  utilities_unformatted.py  visualization.py
(+8 files in other folders)
