[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unreflectanything"
version = "0.1.4"
description = "Deep learning method for removing specular reflections from RGB images."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Alberto Rota"},
  {name = "Mert Kiray"},
  {name = "Mert Asim Karaoglu"},
  {name = "Patrick Ruhkamp"},
  {name = "Elena De Momi"},
  {name = "Nassir Navab"},
  {name = "Benjamin Busam"},
]
maintainers = [
  {name = "Alberto Rota", email = "alberto1.rota@polimi.it"}
]
license = "MIT"
keywords = ["computer vision", "specular removal", "reflection removal", "deep learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "transformers>=4.44",
  "einops>=0.7",
  "numpy==2.4.2",
  "opencv-python>=4.8",
  "scipy==1.17.0",
  "scikit-image==0.25.2",
  "pillow==12.1.0",
  "pyyaml==6.0.3",
  "dotmap==1.3.30",
  "tqdm==4.67.3",
  "python-dotenv==1.2.1",
  "rich==14.3.2",
  "huggingface-hub==0.36.2",
  "debugpy==1.8.20",
  "dill==0.4.1",
  "fvcore==0.1.5.post20221221",
  "lovely-tensors==0.1.21",
  "lpips==0.1.4",
  "matplotlib==3.10.8",
  "moge",
  "natsort==8.4.0",
  "pandas==3.0.0",
  "paramiko==4.0.0",
  "piq==0.8.0",
  "protobuf==6.33.5",
  "rerun-sdk==0.29.1",
  "scikit-learn==1.6.1",
  "wandb==0.24.2",
]

[project.scripts]
unreflectanything = "unreflectanything.cli:main"
unreflect = "unreflectanything.cli:main"
ura = "unreflectanything.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "twine>=5.1"]

[project.urls]
Homepage = "https://github.com/alberto-rota/UnReflectAnything"
Repository = "https://github.com/alberto-rota/UnReflectAnything"
Issues = "https://github.com/alberto-rota/UnReflectAnything/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
moge = { git = "https://github.com/microsoft/MoGe.git" }
transformers = { git = "https://github.com/huggingface/transformers", rev = "2fe43376cdde02b7ffcf117e6eb9aa4375fb2dd1" }

[tool.setuptools]
include-package-data = true
zip-safe = false
# Install "unreflectanything" from directory "endpoints" (keeps import unreflectanything for PyPI)
packages = ["dataset", "utilities", "unreflectanything", "unreflectanything.data"]
package-dir = { "unreflectanything" = "endpoints" }

py-modules = [
  "ablate",
  "ablate_agent",
  "engine",
  "evaluate",
  "geometry",
  "inference",
  "logger",
  "loss_utils",
  "losses",
  "main",
  "metrics",
  "models",
  "models_deprecated",
  "models_old",
  "models_utils",
  "optimization",
  "polar_highlighter",
  "projections",
  "sweep_agent",
  "test",
  "token_inpainters",
  "train",
]

[tool.setuptools.package-data]
"*" = [
  "config_*.yaml",
  "configs/**/*.yaml",
  "assets/**/*",
  "demos/**/*",
  "requirements.txt",
]
"unreflectanything" = [
  "data/*.bash",
  "data/*.zsh",
  "data/*.txt",
]

[tool.pyright]
typeCheckingMode = "off"
venvPath = "."
venv = ".venv"
