[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unreflectanything"
version = "1.1.1"
description = "Deep learning method for removing specular reflections from RGB images."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Alberto Rota"},
  {name = "Mert Kiray"},
  {name = "Mert Asim Karaoglu"},
  {name = "Patrick Ruhkamp"},
  {name = "Elena De Momi"},
  {name = "Nassir Navab"},
  {name = "Benjamin Busam"},
]
maintainers = [
  {name = "Alberto Rota", email = "alberto1.rota@polimi.it"}
]
license = "MIT"
keywords = ["computer vision", "specular removal", "reflection removal", "deep learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dill==0.4.1",
    "dotmap==1.3.30",
    "fvcore==0.1.5.post20221221",
    "natsort==8.4.0",
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "pillow==12.1.1",
    "protobuf==6.33.5",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.3",
    "transformers",
]

[project.scripts]
unreflectanything = "unreflectanything.cli:main"
unreflect = "unreflectanything.cli:main"
ura = "unreflectanything.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "twine>=5.1"]

[project.urls]
Homepage = "https://github.com/alberto-rota/UnReflectAnything"
Repository = "https://github.com/alberto-rota/UnReflectAnything"
Issues = "https://github.com/alberto-rota/UnReflectAnything/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "2fe43376cdde02b7ffcf117e6eb9aa4375fb2dd1" }

[tool.setuptools]
include-package-data = true
zip-safe = false
# Install "unreflectanything" from directory "endpoints" (keeps import unreflectanything for PyPI)
packages = ["dataset", "utilities", "unreflectanything", "unreflectanything.assets"]
package-dir = { "unreflectanything" = "endpoints" }

py-modules = [
  "ablate",
  "ablate_agent",
  "engine",
  "evaluate",
  "geometry",
  "highlight_render",
  "inference",
  "logger",
  "loss_utils",
  "losses",
  "main",
  "metrics",
  "models",
  "models_old",
  "utilities.model",
  "optimization",
  "projections",
  "sweep_agent",
  "test",
  "token_inpainters",
  "train",
]

[tool.setuptools.package-data]
"*" = [
  "config_*.yaml",
  "configs/**/*.yaml",
  "assets/**/*",
  "demos/**/*",
  "requirements.txt",
]
"unreflectanything" = [
  "assets/pretrained_config.yaml",
  "assets/*.bash",
  "assets/*.zsh",
  "assets/*.txt",
  "assets/*.json",
]

[tool.pyright]
typeCheckingMode = "off"
venvPath = "."
venv = ".venv"
